--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -30,25 +30,24 @@
       <h1 class="col-md-offset-4">Global Atlas</h1>
     </header>
     <nav>
-      <button class="btn-lg btn-primary">Search maps</button>
       <button class="btn-lg btn-primary pull-right" data-toggle="modal" data-target="#mr_form">Request a map</button>
     </nav>
+    
     <!-- Add your site or application content here -->
     <div class="map" id="map">
       Map goes here
     </div>
+
     <!-- Map Request form -->
     <div class="modal fade" id="mr_form">
         <div class="modal-content">
             <form name="mr_form" ng-controller="MRController">
-                {% csrf_token %}
                 <legend>Request for a map</legend>
                 {{ mr_form|as_bootstrap }}
                 <div class="form-actions">
                   <a class="btn" data-dismiss="modal">Go back</a>
                   <button type="submit" class="btn btn-primary" ng-click="submit()">Save changes</button>
-                </div>
-                
+                </div>           
             </form>
         </div>
     </div>
@@ -90,7 +89,7 @@
               urls: data
             });
 
-            // Config general ajax parameters
+            // Configure general ajax parameters
             module.config(function($httpProvider) {
               $httpProvider.defaults.headers.common['X-Requested-With'] = 'XMLHttpRequest';
               $httpProvider.defaults.xsrfCookieName = 'csrftoken';
