--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -32,7 +32,7 @@
     <nav>
       <button class="btn-lg btn-primary pull-right" data-toggle="modal" data-target="#mr_form">Request a map</button>
     </nav>
-    
+
     <!-- Add your site or application content here -->
     <div class="map" id="map">
       Map goes here
@@ -41,12 +41,12 @@
     <!-- Map Request form -->
     <div class="modal fade" id="mr_form">
         <div class="modal-content">
-            <form name="mr_form" ng-controller="MRController">
+            <form name="{{mr_form.name}}" ng-controller="MRController" novalidate>
                 <legend>Request for a map</legend>
-                {{ mr_form|as_bootstrap }}
+                {{ mr_form.as_p }}
                 <div class="form-actions">
                   <a class="btn" data-dismiss="modal">Go back</a>
-                  <button type="submit" class="btn btn-primary" ng-click="submit()">Save changes</button>
+                  <button type="submit" ng-disabled="!mr_form.$valid" class="btn btn-primary" ng-click="submit()">Save changes</button>
                 </div>           
             </form>
         </div>
