--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -13,6 +13,8 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
+    <link rel="stylesheet" href="{% static "bower_components/select2/select2.css" %}">
+    <link rel="stylesheet" href="{% static "bower_components/jquery-ui/themes/smoothness/jquery-ui.css" %}">
     <!-- bower:css -->
     <link rel="stylesheet" href="{% static "bower_components/bootstrap/dist/css/bootstrap.css" %}">
     <!-- endbower -->
@@ -32,10 +34,39 @@
     <nav>
       <button class="btn-lg btn-primary pull-right" data-toggle="modal" data-target="#mr_form">Request a map</button>
     </nav>
+    
+    <!-- Add search here -->
+    <div class="search" id="search">
+      <p>Countries</p>
+      <div id="country_select" ui-select2="select2Options" ng-model="select2" placeholder="Type to search" ng-controller="CountrySelectController">
+      </div>
+      <p>Regions</p>
+      <ul id="regions">
+        {% for region in regions %}
+          <li>{{ region }}</li>
+        {% endfor %}
+      </ul>
+      <p>Categories</p>
+      <ul id="categories">
+        {% for category in categories %}
+          <li>{{ category }}</li>
+        {% endfor %}
+      </ul>
+      <p>Themes</p>
+      <ul id="themes">
+        {% for theme in themes %}
+          <li>{{ theme }}</li>
+        {% endfor %}
+      </ul>
+    </div>
 
-    <!-- Add your site or application content here -->
+    <!-- Add map here -->
     <div class="map" id="map">
       Map goes here
+    </div>
+
+    <div class="search_results" id="search_results">
+
     </div>
 
     <!-- Map Request form -->
@@ -45,7 +76,7 @@
                 <legend>Request for a map</legend>
                 {{ mr_form.as_p }}
                 <div class="form-actions">
-                  <a class="btn" data-dismiss="modal">Go back</a>
+                  <a class="btn" data-dismiss="modal">Close</a>
                   <button type="submit" ng-disabled="!mr_form.$valid" class="btn btn-primary" ng-click="submit()">Save changes</button>
                 </div>           
             </form>
@@ -60,11 +91,14 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="{% static "bower_components/jquery/jquery.js" %}"></script>
+    <script src="{% static "bower_components/select2/select2.min.js" %}"></script>
     <script src="{% static "bower_components/angular/angular.js" %}"></script>
     <script src="{% static "bower_components/bootstrap/dist/js/bootstrap.js" %}"></script>
     <script src="{% static "bower_components/angular-cookies/angular-cookies.js" %}"></script>
     <script src="{% static "bower_components/angular-sanitize/angular-sanitize.js" %}"></script>
     <script src="{% static "bower_components/angular-route/angular-route.js" %}"></script>
+    <script src="{% static "bower_components/jquery-ui/ui/jquery-ui.js" %}"></script>
+    <script src="{% static "bower_components/angular-ui-select2/src/select2.js" %}"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -79,8 +113,9 @@
     <script>
         goog.require('atlas');
      </script>
-     <script type="text/javascript">
+      <script type="text/javascript">
         (function(){
+          $( "#id_deadline" ).datepicker();
           $.get("{% url 'api_api_top_level' api_name='api' %}", function(data){
             var module = angular.module('atlas');
 
