some basic styling

--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -4,6 +4,11 @@ body {
   padding-bottom: 20px;
 }
 
+#wrapper { 
+ margin: 0 auto;
+ width: 1024px;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -17,7 +22,7 @@ body {
   border-bottom: 1px solid #e5e5e5;
 }
 /* Make the masthead heading the same height as the navigation */
-.header h3 {
+h1 {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
@@ -79,8 +84,22 @@ body {
 }
 
 #mr_form{
-  width: 400px;
   height: 700px;
+}
+
+#mr_form  p{
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 10px;
+  margin-right: 10px
+}
+
+#mr_form label{
+  width: 50px;
+}
+
+.mr_form_wrapper{
+  padding: 10px;
 }
 
 input.ng-invalid {
@@ -109,3 +128,39 @@ input.error:focus, textarea.error:focus { background: #fafafa; border-color: #99
 .error select:focus { background: #fafafa; border-color: #999999; }
 
 label.error { color: #c60f13; }
+
+.active{
+  border:0;
+  background: rgb(200,203,202); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(200,203,202,1) 0%, rgba(218,221,220,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(200,203,202,1)), color-stop(100%,rgba(218,221,220,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* IE10+ */
+  background: linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c8cbca', endColorstr='#dadddc',GradientType=0 ); /* IE6-9 */
+  color:@grayDarker;
+}
+
+#map{
+  width: 400px;
+  height: 400px;
+  border: 1px solid black;
+}
+
+.search_block{
+  margin: 10px;
+}
+
+.search_filter > li{
+  list-style-type: none;
+}
+
+ul{
+  padding: 0px;
+}
+
+textarea{
+  width: 200px;
+  height: 50px;
+}
