--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -14,6 +14,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <link rel="stylesheet" href="{% static "bower_components/select2/select2.css" %}">
+    <link rel="stylesheet" href="{% static "bower_components/leaflet-dist/leaflet.css" %}">
     <link rel="stylesheet" href="{% static "bower_components/jquery-ui/themes/smoothness/jquery-ui.css" %}">
     <!-- bower:css -->
     <link rel="stylesheet" href="{% static "bower_components/bootstrap/dist/css/bootstrap.css" %}">
@@ -69,9 +70,8 @@
       </div>
 
       <!-- Add map here -->
-      <div class="map col-md-4" id="map">
-        Map goes here
-      </div>
+      <leaflet ng-controller="MapController" class="map col-md-4" id="map">
+      </leaflet>
 
       <div class="search_results col-md-4" id="search_results">
         <h3>Available Maps</h3>
@@ -111,6 +111,8 @@
     <script src="{% static "bower_components/angular-route/angular-route.js" %}"></script>
     <script src="{% static "bower_components/jquery-ui/ui/jquery-ui.js" %}"></script>
     <script src="{% static "bower_components/angular-ui-select2/src/select2.js" %}"></script>
+    <script src="{% static "bower_components/leaflet-dist/leaflet.js" %}"></script>
+    <script src="{% static "bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js" %}"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
