some small fixes

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -73,7 +73,7 @@
       <leaflet ng-controller="MapController" class="map col-md-4" id="map">
       </leaflet>
 
-      <div class="search_results col-md-4" id="search_results">
+      <div class="search_results" id="search_results">
         <h3>Available Maps</h3>
         <div ng-repeat="map in search_results">
           <span ng-bind="map.title"></span>
