--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -72,14 +72,24 @@
 
       <!-- Add map here -->
       <div ng-controller="MapController" class="map col-md-4 pull-left" id="map">
-        <leaflet center="center" geojson="countries" layers="layers">
+        <leaflet center="center" geojson="countries" layers="layers" legend="legend">
         </leaflet>
       </div>
 
       <div class="search_results pull-left" id="search_results">
         <h3>Available Maps</h3>
         <div ng-repeat="map in search_results">
-          <span ng-bind="map.title"></span>
+          <article class="result_article">
+            <div class="item-header">
+              <h3 ng-bind="map.title"></h3>
+            </div>
+            <div class="details">
+              <ul>      
+                <li><strong>Format: </strong><span ng-bind="map.size.name"></span></li>
+                <li><strong>Source: </strong><span ng-bind="map.source.name"></span></li>
+              </ul>
+            </div>
+          </article>
         </div>
       </div>
     </div>
