--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -208,3 +208,9 @@ textarea{
     margin-right: 8px;
     opacity: 0.7;
 }
+
+.search strong{
+  margin: 5px;
+  min-width: 150px;
+  color: #657FCB;
+}
