add search by title

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -57,6 +57,10 @@
         </div>
         <div class="attribute-filters pull-left">
           <strong class="pull-left">Refine your query</strong>
+          <div class="pull-left">
+            <label>Title</label>
+            <input ng-model="title" type="text" ng-controller="TitleSelectController"></input>
+          </div>
           <div class="pull-left search_block">
             <label>Themes</label>
             <ul class="search_filter" id="themes">
