add placeholder to title search

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -59,7 +59,7 @@
           <strong class="pull-left">Refine your query</strong>
           <div class="pull-left">
             <label>Title</label>
-            <input ng-model="title" type="text" ng-controller="TitleSelectController"></input>
+            <input ng-model="title" type="text" ng-controller="TitleSelectController" placeholder="Type to search"></input>
           </div>
           <div class="pull-left search_block">
             <label>Themes</label>
