--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -103,11 +103,11 @@
           <div ng-repeat="map in search_results">
             <article class="result_article">
               <div class="item-header">
-                <h4 ng-bind="map.title"></h4>
-              </div>
-              <div class="thumbnail">
                 {% verbatim %}
-                <img ng-src="{{map.map_thumbnail}}" />
+                <a ng-href="{{ map.map_file }}" download><h4 ng-bind="map.title"></h4></a>
+              </div>
+              <div class="thumbnail">    
+                <img ng-src="{{ map.map_thumbnail }}" />
                 {% endverbatim %}
               </div>
               <div class="details">
