add anchor to the thumbnail

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -107,7 +107,7 @@
                 <a ng-href="{{ map.map_file }}" download><h4 ng-bind="map.title"></h4></a>
               </div>
               <div class="thumbnail">    
-                <img ng-src="{{ map.map_thumbnail }}" />
+                <a ng-href="{{ map.map_file }}" download><img ng-src="{{ map.map_thumbnail }}" /></a>
               </div>
             </article>
             {% endverbatim %}
