--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -102,13 +102,14 @@
         <div class="search_results">
           <div ng-repeat="map in search_results">
             {% verbatim %}
-            <article class="result_article" data-toggle="popover" data-content="<strong>Format: </strong>{{map.format}}</br><strong>Size: </strong>{{map.size.name}}</br><strong>Category: </strong>{{map.category.name}}</br><strong>Source: </strong>{{map.source.name}}</br><strong>Country: </strong>{{map.country}}</br><strong>Theme: </strong>{{map.theme.name}}" data-title="<strong>Metadata</strong>">
+            <article class="result_article" data-toggle="popover" data-content="<strong>Format: </strong>{{map.format}}</br><strong>Size: </strong>{{map.size.name}}</br><strong>Category: </strong>{{map.category.name}}</br><strong>Source: </strong>{{map.source.name}}</br><strong>Country: </strong>{{map.country}}</br><strong>Theme: </strong>{{map.theme.name}}</br><strong>Scale: </strong>{{map.scale}}</br><strong>Description: </strong>{{map.description}}" data-title="<strong>Metadata</strong>">
               <div class="item-header">
                 <a ng-href="{{ map.map_file }}" download><h4 ng-bind="map.title"></h4></a>
               </div>
               <div class="thumbnail">    
                 <a ng-href="{{ map.map_file }}" download><img ng-src="{{ map.map_thumbnail }}" /></a>
               </div>
+              <span class="map_date">Published on: {{map.date | date:mediumDate}}</span>
             </article>
             {% endverbatim %}
           </div>
