--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -175,7 +175,7 @@ textarea{
 .result_article h4{
   margin-top: 5px;
   padding-left: 0px;
-  color: #90A3D9;
+  color: #657FCB;
 }
 
 .result_article{
